# credence

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  cliff.toml  cppcheck.suppress  index.html
.github/workflows/: ci.yml  release.yml
cmake/: doctest.cmake
credence/: assert.h  error.h  eternal.h  expression.cc  expression.h  json.h  main.cc  map.h  operators.h  python.cc  python.h  queue.cc  queue.h  rvalue.cc  rvalue.h  symbol.h  typeinfo.h  types.h  util.cc  util.h  value.cc  value.h  values.cc  values.h
credence/ir/: README.md  checker.cc  checker.h  context.cc  context.h  ita.cc  ita.h  normal.cc  normal.h  object.cc  object.h  parser.cc  parser.h  qaud.cc  qaud.h  table.cc  table.h  temp.cc  temp.h  temporary.cc  temporary.h  types.cc  types.h
credence/language/: README.md  datatype.cc  datatype.h  grammar.lark  lexer.cc  lexer.h  lexer.re  node.cc  node.h  operators.h  parser.cc  parser.h  re2c.md  resolver.cc  resolver.h  rvalue.cc  rvalue.h  shunting_yard.cc  shunting_yard.h  symbol_table.cc  symbol_table.h
docs/: DECISIONS.md
etc/: ast.json  simple.b
examples/: 1.b  2.b  3.b  4.b
ext/: README.md
grammar/: b-grammar.abnf  b-grammar.ebnf
roxas/: ast.cc  ast.h  config.h  ir.cc  ir.h  json.h  main.cc  operators.h  parse_tree.cc  parse_tree.h  python.cc  python.h  python_module.cc  queue.cc  queue.h  symbol.cc  symbol.h  types.h  util.cc  util.h
roxas/ir/: emit.cc  emit.h  ir.cc  ir.h  operators.h  qaud.cc  qaud.h  quint.cc  quint.h  rvalues.cc  rvalues.h  table.cc  table.h  temp.cc  temp.h  types.h  util.cc  util.h
scripts/: install.sh
standalone/: CMakeLists.txt
stdlib/arm64/bsd/: stdlib.s
stdlib/arm64/linux/: stdlib.s
stdlib/x86_64/bsd/: stdlib.s
stdlib/x86_64/linux/: stdlib.s
test/: CMakeLists.txt  compiled-test.sh  context.cc  emit.cc  expression.cc  ir.cc  ita.cc  normal.cc  qaud.cc  queue.cc  quint.cc  run-tests.sh  rvalue.cc  rvalues.cc  symbol.cc  table.cc  util.cc  x86_64.cc
test/arm64/: generator.cc
test/fixtures/: assoc.b  assoc2.b  call.b  call_2.b  call_3.b  call_4.b  complex.b  constant.b  constant_literal.b  definition.b  empty.b  evaluated.b  expr.b  extrn.b  floats.b  function.b  function_2.b  function_3.b  functions.b  goto.b  if.b  if_2.b  if_3.b  if_4.b  if_5.b  if_else.b  if_simple.b  inc_dec.b  inc_dec_2.b  ir.b  label.b  lvalue.b  nested_binary.b  nested_or.b  qaud copy.b  qaud.b  readme.b  readme_2.b  recursion.b  relation.b  (+19 more)
test/fixtures/arm64/: bitwise_4.b  math_constant.b  math_constant_4.b  math_constant_6.b  pointers_3.b  readme_2.b  simple_test.b  string_2.b  vector_3.b
test/fixtures/arm64/ast/: address_of_2.json  vector_2.json  vector_3.json
test/fixtures/ast/: floats.json
test/fixtures/language/: auto_statement.b  bare_semicolon.b  break_statement.b  chained_assignment.b  char_literal_normal.b  char_literal_space.b  extrn_statement.b  function_calls.b  function_with_params.b  goto_label.b  if_else.b  if_no_else.b  indirect_lvalue_precedence.b  label_with_space.b  mixed_operators.b  multiple_expr_statements.b  numeric_literals.b  return_value.b  right_assoc_chain.b  string_literal.b  switch_case.b  ternary_bare.b  ternary_nested.b  ternary_relation_condition.b  unary_forms.b  vector_bare.b  vector_indexing.b  vector_no_size.b  vector_sized_init.b  while_statement.b
test/fixtures/language/ast/: auto_statement.json  bare_semicolon.json  break_statement.json  chained_assignment.json  char_literal_normal.json  char_literal_space.json  extrn_statement.json  function_calls.json  function_no_params.json  function_with_params.json  goto_label.json  if_else.json  if_no_else.json  indirect_lvalue_precedence.json  label_with_space.json  mixed_operators.json  multiple_expr_statements.json  numeric_literals.json  return_value.json  right_assoc_chain.json  string_literal.json  switch_case.json  ternary_bare.json  ternary_nested.json  ternary_relation_condition.json  unary_forms.json  vector_bare.json  vector_indexing.json  vector_no_size.json  vector_sized_init.json  while_statement.json
test/fixtures/language/symbols/: auto_statement.json  extrn_statement.json  function_calls.json  function_with_params.json  goto_label.json  indirect_lvalue_precedence.json  label_with_space.json  numeric_literals.json  return_value.json  right_assoc_chain.json  ternary_bare.json  ternary_nested.json  unary_forms.json  vector_bare.json  vector_indexing.json  vector_no_size.json  vector_sized_init.json
test/fixtures/platform/: address_of_1.b  address_of_2.b  argc_argv.b  bitwise_3.b  bitwise_constant_2.b  call_1.b  call_2.b  globals_1.b  globals_3.b  math_constant.b  math_constant_3.b  math_constant_5.b  math_constant_6.b  math_constant_7.b  math_constant_8.b  pointers_1.b  pointers_2.b  pointers_4.b  pointers_5.b  relation_constant.b  relation_constant_2.b  vector_2.b  vector_4.b
test/fixtures/platform/ast/: address_of_1.json  argc_argv.json  bitwise_2.json  bitwise_3.json  bitwise_4.json  globals_2.json  globals_3.json  math_constant_2.json  math_constant_4.json  math_constant_5.json  math_constant_6.json  math_constant_8.json  pointers_3.json  pointers_5.json  readme_2.json  relation_constant.json  string_2.json  string_3.json  vector_1.json  vector_4.json
test/fixtures/platform/relational/: switch_1.b  while_1.b
test/fixtures/types/: types.b  types_1.b  types_10.b  types_11.b  types_12.b  types_13.b  types_14.b  types_15.b  types_16.b  types_17.b  types_18.b  types_19.b  types_2.b  types_20.b  types_21.b  types_22.b  types_3.b  types_4.b  types_5.b  types_6.b  types_7.b  types_8.b  types_9.b
test/fixtures/x86_64/: address_of_2.b  bitwise_2.b  bitwise_constant_1.b  globals_1.b  globals_2.b  math_constant.b  math_constant_2.b  math_constant_5.b  pointers_3.b  pointers_4.b  readme_2.b  relation_constant.b  string_1.b  string_2.b  string_3.b  string_4.b  vector_1.b
test/language/: node.cc  parser.cc  resolver.cc  rvalue.cc  shunting_yard.cc  symbol_table.cc
test/x86_64/: codegen.cc  generator.cc  instructions.cc
(+111 files in other folders)
